# senior-project

Senior_Project/: Senior_Project.sln
Senior_Project/Senior_Project/: Aligner.cpp  Aligner.h  DNASequence.cpp  DNASequence.h  FastaParser.cpp  FastaParser.h  Feature.cpp  Feature.h  Gene.cpp  Gene.h  OrfFinder.cpp  OrfFinder.h  SearchAlgorithm.cpp  SearchAlgorithm.h  SearchMatch.cpp  SearchMatch.h  Senior_Project.vcxproj  Senior_Project.vcxproj.filters  TrieIndex.cpp  TrieIndex.h  TrieNode.cpp  TrieNode.h  main.cpp
Senior_Project/Senior_Project/data/: sample.fasta  sample2.fasta
Senior_Project/Senior_Project/x64/Debug/: Senior_Project.exe.recipe  Senior_Project.ilk  vc143.idb
Senior_Project/Senior_Project/x64/Debug/Senior_Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Senior_Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Senior_Project_GUI/: CMakeLists.txt  main.cpp
Senior_Project_GUI/.qtcreator/: CMakeLists.txt.user.16f8252
Senior_Project_GUI/algorithms/: OrfFinder.cpp  SearchAlgorithm.cpp  TrieIndex.cpp  TrieNode.cpp
Senior_Project_GUI/core/: DNASequence.cpp  Feature.cpp
Senior_Project_GUI/features/: Gene.cpp  SearchMatch.cpp
Senior_Project_GUI/gui/: ResultsPanel.cpp  Sequence.cpp  mainwindow.cpp  mainwindow.h
